# pv-c

./: .gitignore  .main.cpp.swp  .ninja_deps  .ninja_log  CMakeLists.txt  Eyes.cpp  Eyes.h  Face.cpp  Face.h  Texture.cpp  Texture.h  TextureSource.cpp  TextureSource.h  build-desktop.sh  build.ninja  build.sh  gradient.cpp  gradient.h  listen.sh  listen.sh.save  main.cpp  process_names.txt  sync_and_restart.sh  toolchain-arm.cmake
.cmake/api/v1/reply/: cache-v2-68ba185d18eebccce4e9.json  cache-v2-91335582b8ad836652fd.json  cmakeFiles-v1-242782cdb2d14421fe93.json  cmakeFiles-v1-be28226b4ab7d9527dc8.json  codemodel-v2-be0a5ead045ed7db168b.json  codemodel-v2-d9254edc5af7376b78e5.json  index-2025-12-09T15-06-46-0127.json  index-2026-01-16T23-15-58-0145.json  target-PkgConfig__PC_LIBUNWIND-cbe545980c64c07059ce.json  target-SDL3__Headers-2c7dfa328420f7155a67.json  target-SDL3__SDL3-shared-947843dbcb82428e20fb.json  target-SDL3__SDL3_test-90f9fc9ff8408d0a458c.json  target-pv-c-4d0e43e5b2299781a5b3.json  target-pv-c-Debug-e8232d77c909f4c988e3.json
previewer/: app.js  index.html  style.css
src/: Eye.cpp  Eye.h  Eyes.cpp  Eyes.h  Face.cpp  Face.h  Faces copy.cpp  Faces copy.h  Faces.cpp  Faces.h  Texture.cpp  Texture.h  TextureSource.cpp  TextureSource.h  gradient.cpp  gradient.h  main.cpp
src/matrix_emu/: led-matrix.cpp  led-matrix.h
